IDE refactor: code cleanup (#178)